main.tf
terraform {
    required_providers {
        aws = {
            source = "hashicorp/aws"
            version = "~> 5.0"
        }
    }
}

provider "aws" {
    region = "ap-southeast-2"
}

# 1. VPC
resource "aws_vpc" "default" {
    cidr_block = "10.0.0.0/16"
    tags = { Name = "strapi-vpc"}
}

# 2. Public Subnet
resource "aws_subnet" "public" {
    vpc_id = aws_vpc.default.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = true
    tags = { Name = "strapi-subnet"}
} 

# 3. Internet Gateway + Route Table
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.default.id
    tags = { Name = "strapi-igw"}
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.default.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }

    tags = { Name = "strapi-public-rt"}
}

resource "aws_route_table_association" "public_assoc" {
    subnet_id = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
}

# 4. Security Group
resource "aws_security_group" "strapi_sg" {
    name = "strapi-sg"
    description = "Allow HTTP and SSH"
    vpc_id = aws_vpc.default.id

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 1337
        to_port = 1337
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = { Name = "strapi-sg"}
}

# 5. EC2 Instance
resource "aws_instance" "strapi" {
    ami = data.aws_ami.ubuntu.id
    instance_type = "t3.micro"
    key_name = "strapi-ec2"  
    subnet_id = aws_subnet.public.id
    vpc_security_group_ids = [aws_security_group.strapi_sg.id]
    user_data = file("install-strapi.sh")

    tags = {
        Name = "strapi-server"
    }
}

# Fetch the latest
data "aws_ami" "ubuntu" {
    most_recent = true
    owners = ["099720109477"] # Canonical

    filter {
        name = "name"
        values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
    }
}

# 6. Outputs
output "strapi_url" {
    value = "http://${aws_instance.strapi.public_ip}:1337"
    description = "URL to access Strapi"
}
